--- a/style.css
+++ b/style.css
@@ -21,8 +21,8 @@ body {
 /* the top "PokeSearch" text*/
 p {
   position: absolute;
-  top: 30px;
-  left: 190px;
+  top: 20px;
+  left: 125px;
   font-weight: bold;
   color: black;
 }
@@ -37,7 +37,7 @@ p1 {
 p2 {
   top: 65px;
   position: absolute;
-  left: 230px;
+  left: 220px;
   color: white;
 }
 p3 {
@@ -46,11 +46,20 @@ p3 {
   left: 320px;
   color: white;
 }
-.theTypeButton {
-  top: 270px;
+p4 {
   position: absolute;
-  left: 5px;
+  top: 55px;
+  left: 60px;
+}
+
+.randomButton {
+  top: 33px;
+  position: absolute;
+  left: 520px;
   height: 30px;
+  width: 60px;
+  height: 50px;
+  color: red;
 }
 
 .top-box-search {
@@ -62,11 +71,12 @@ p3 {
   padding: 0px;
   margin: 0px;
 }
-#search-bar {
+#searchBar {
   position: relative;
   top: 30px;
   height: 50px;
   left: 80px;
+  font-size: 1rem;
 }
 
 .the-box-inside-the-big-box {
@@ -176,4 +186,10 @@ p3 {
 .line-3,
 .line-4 {
   border-bottom: solid 3px red;
+}
+
+img {
+  position: absolute;
+  top: 80px;
+  left: 90px;
 }
