--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
   align-items: center;
   justify-content: center;
   font-family: sans-serif;
+  background-image: conic-gradient(black, blue, black);
 }
 
 .the-big-frame {
